@@ -297,7 +297,7 @@ void Mouse::set_speed_cursor()
 			gwin->get_shape_location(gwin->get_main_actor(), ax, ay);
 	
 		int dy = ay - mousey, dx = mousex - ax;
-		Direction dir = Get_direction(dy, dx);
+		Direction dir = Get_direction_NoWrap(dy, dx);
 		Rectangle gamewin_dims = gwin->get_game_rect();
 		float speed_section = max( max( -static_cast<float>(dx)/ax, static_cast<float>(dx)/(gamewin_dims.w-ax)), max(static_cast<float>(dy)/ay, -static_cast<float>(dy)/(gamewin_dims.h-ay)) );
 		bool nearby_hostile = gwin->is_hostile_nearby();
